@@ -5,5 +5,5 @@
 
 String get_String_from_Buffer(Buffer b, regex_t *re);
 String get_line_from_Buffer(Buffer b);
-char *find_RegEx(regex_t *re, char *str, int len);
-char *memstr(char *mem, int len);
+unsigned char *find_RegEx(regex_t *re, unsigned char *str, int len);
+unsigned char *memstr(unsigned char *mem, int len);
